added event name and priest name in dto